# Burrow-Windows

./: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
docs/: architecture.md
engine/: clean.ps1  optimize.ps1  purge.ps1  uninstall.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commander.rs  db.rs  disk_scanner.rs  lib.rs  main.rs  maintenance.rs  mcp.rs  query_server.rs  sampler.rs  snapshot.rs  tray.rs  treemap.rs
src/components/: ActionButton.tsx  GlassCard.tsx  LogTerminal.tsx  MetricCard.tsx  PageTitle.tsx  ProcessTable.tsx  ProgressBar.tsx  ResultBanner.tsx  TopNav.tsx
src/context/: ThemeContext.tsx  toolAccents.ts
src/hooks/: useHistory.ts  useMetrics.ts  useScanner.ts
src/lib/: api.ts  format.test.ts  format.ts  lineStyle.ts
src/pages/: Activity.tsx  Analyze.tsx  Clean.tsx  History.tsx  Optimize.tsx  Purge.tsx  Settings.tsx  Software.tsx  Status.tsx
