[package]
name = "burrow-windows"
version = "0.1.0"
edition = "2021"

[lib]
name = "burrow_windows"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "burrow"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
